--- a/package.json
+++ b/package.json
@@ -11,8 +11,15 @@
   "dependencies": {
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
+    "mapbox-gl": "^2.15.0",
     "next": "13.4.13",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.10.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3"
   }
 }
